@@ -27,34 +27,4 @@ char *s = N_("Copyright © 2006-2008 Vlad Vasiliev.");
 char *s = N_("Current Version: __VERSION__");
 char *s = N_("Custom city support");
 char *s = N_("Detailed weather forecast for 10 days");
-char *s = N_("First thing to do is select the size and position of a OMWeather applet. You can change position of the applet simply touching it and dragging it where you want it. Size of the applet can be changed touching and dragging triangle in the applets bottom right corner. When you are finished setting up applet to your preferences, touching the <display_text>Ok</display_text> button will lead you back to desktop.");
-char *s = N_("Getting Started");
-char *s = N_("In this window you need first select country from a drop down menu. Next you need to select correct state or province and a place which weather you want to monitor.");
-char *s = N_("In this window you need to enter station name and station code. Station codes can be found from (http://xoap.weather.com/search/search?here=station_name) or you can use ZIP code for US stations.");
-char *s = N_("Interface");
-char *s = N_("Introduction");
-char *s = N_("Locations");
-char *s = N_("OMWeather");
-char *s = N_("OMWeather is a weather applet for Nokia Internet Tablets desktop that can be used to:");
-char *s = N_("OMWeather was developed by Vlad Vasiliev (vlad@gas.by).");
-char *s = N_("OMWeather will use Tablets Home city selection as a default location for weather data. This location can be changed by touching the applet and selecting <display_text>Settings</display_text>. More info of how to add, rename and delete locations can be found on <ref refid=\"help_omweather_settings\" refdoc=\"Settings\"/> page.");
-char *s = N_("Settings");
-char *s = N_("The <display_text>Settings</display_text> dialog (accessible from the desktop applet or home screens Applet settings menu) provides access to the configurable options that control how OMWeather appears and run. In addition to the tabs, there are also a <display_text>About</display_text> button to show information of the OMWeather.");
-char *s = N_("The list of stations in window \"Add station\" is sorted");
-char *s = N_("This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.");
-char *s = N_("This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.");
-char *s = N_("To activate OMWeather select <display_text>Home</display_text> > <display_text>Select applets...</display_text> > <display_text>OMWeather</display_text>.");
-char *s = N_("To manually update weather data select refresh button from the detailed weather window (two small arrows in the upper right corner).");
-char *s = N_("To see time of the sunrise/sunset or phase of the moon select >>. This window will also show some weather data update times.");
-char *s = N_("Touching icon of a day brings up a small windows where you can see current weather or detailed forecast of a selected day. Touching <display_text>Settings</display_text> button will open OMWeather settings dialog.");
-char *s = N_("Transparency option");
-char *s = N_("Units");
-char *s = N_("Update");
-char *s = N_("Use the <ref refid=\"help_omweather_\" refdoc=\"index\"/> to use the various sections of this help document.");
-char *s = N_("User is able to add station on the basis of a code for weather.com (http://xoap.weather.com/search/search?here=station_name) or ZIP code USA");
-char *s = N_("User is able to change amount of days from 1 to 10");
-char *s = N_("User is able to select font color and background color which he likes");
-char *s = N_("Using Desktop Applet");
-char *s = N_("Weather data provided by: xoap.weather.com");
-char *s = N_("Welcome to OMWeather.");
-char *s = N_("You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA");
+char *s = N_("First thing to do is select the size and position of a OMWeather applet. You can change position of the applet simply touching it and dragging it where you want it. Size of the applet can be changed touching and dragging triangle in the applets bottom right corner. When you are finished setting up applet to your preferences, touching the <display_t
