@@ -47,6 +47,7 @@
 #define GCONF_KEY_SEPARATE_DATA			GCONF_KEY_PREFIX"/separate-data"
 #define GCONF_KEY_SWAP_TEMPERATURE		GCONF_KEY_PREFIX"/swap-temperature"
 #define GCONF_KEY_HIDE_STATION_NAME		GCONF_KEY_PREFIX"/hide-station-name"
+#define GCONF_KEY_HIDE_ARROWS			GCONF_KEY_PREFIX"/hide-arrows"
 #define GCONF_KEY_WEATHER_UPDATE_INTERVAL	GCONF_KEY_PREFIX"/update-interval"
 #define GCONF_KEY_WEATHER_TEMPERATURE_UNIT	GCONF_KEY_PREFIX"/temperature-unit"
 #define GCONF_KEY_ICONS_LAYOUT			GCONF_KEY_PREFIX"/icons-layout"   
